fixed progress bar spacing

--- a/form.css
+++ b/form.css
@@ -195,7 +195,3 @@ label {
   padding-left: 10px;
   padding-top: 10px;
 }
-
-.navbar-fixed-bottom ul a {
-
-}
