--- a/test.css
+++ b/test.css
@@ -18,6 +18,7 @@
   font-size: 18px;
   box-shadow: none;
   padding-left: 5%;
+  padding-right: 5%;
 }
 
 .progress-bar {
@@ -210,4 +211,8 @@ display: block;
 
 .navbar-fixed-bottom ul li a {
   text-decoration: none
+}
+
+.fa-life-ring {
+  color: #187189;
 }
